fix scrollbar in chatarea going outside

--- a/scss/partials/_bar.scss
+++ b/scss/partials/_bar.scss
@@ -6,7 +6,7 @@
   height: 44px;
   padding: 0 3px;
   position: relative;
-  width: 100%;
+  width: 100% !important;
 
   &__action-entry {
     cursor: pointer;
