--- a/scss/partials/_window.scss
+++ b/scss/partials/_window.scss
@@ -49,7 +49,7 @@
     flex-grow: 1;
     left: 0;
     overflow: auto;
-    padding: 3px;
+    padding: 3px 0 3px 0;
     width: 100%;
     z-index: 10;
   }
